--- a/css.css
+++ b/css.css
@@ -1,13 +1,18 @@
 #container {
     display: grid;
-
+    margin: 0 auto;
     grid-template-columns: repeat(16, 50px);
     grid-template-rows: repeat(16, 50px);
     justify-self: center;
-    border: 1px solid black;
+    border: 1px  black;
 }
     
-
+.cell {
+    width: 50px;
+height: 50px;
+background: rgb(143, 132, 132);
+border: 1px solid black;
+}
 
 
 
