--- a/css.css
+++ b/css.css
@@ -1,17 +1,19 @@
 #container {
     display: grid;
-    margin: 0 auto;
-    grid-template-columns: repeat(16, 50px);
-    grid-template-rows: repeat(16, 50px);
-    justify-self: center;
+    grid-template-columns: repeat(16, 30px);
+    grid-template-rows: repeat(16, 30px);
     border: 1px  black;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
     
 .cell {
-    width: 50px;
-height: 50px;
-background: rgb(143, 132, 132);
-border: 1px solid black;
+    width: 30px;
+height: 30px;
+background: rgb(0, 0, 0);
+border: 1px solid white;
 }
 
 
@@ -45,9 +47,6 @@ border: 1px solid black;
 
 
 
-
-
-}
 
 
 
