--- a/css.css
+++ b/css.css
@@ -5,10 +5,20 @@
     border: 1px  black;
     margin-top: auto;
     margin-bottom: auto;
-    margin-left: auto;
+    margin-left: 400px;
     margin-right: auto;
 }
-    
+
+#reset {
+    margin-bottom: 20px;
+    margin-left: 550px;
+    padding: 2%;
+    font-style: italic;
+   
+}
+
+
+
 .cell {
     width: 30px;
 height: 30px;
